--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
     <div class="p"><span class="day"></span><span class="month"></span></div>
     
   </div>
-  
+    <div class="audio">
+    
+ <audio controls autoplay>
+   <source src="night.mp4" type=""> </source> </audio>
+   
+    </div>
   
   
   <script src="main.js"></script>
