--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </div>
     <div class="audio">
     
- <audio controls autoplay>
+ <audio>
    <source src="night.mp3" > </source> </audio>
    
     </div>
