--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
   </div>
     <div class="audio">
     
- <audio>
-   <source src="night.mp3" > </source> </audio>
+ <audio controls>
+   <source src="night.mp3" >
+ </audio>
    
     </div>
   
