--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </div>
     <div class="audio">
     
- <audio controls>
+ <audio controls autoplay>
    <source src="Subaru.mp3" >
  </audio>
    
